# little-drummer-boy

./: .gitignore  CLAUDE.md  Cargo.toml  GOALS.md  README.md  TUI-design-philosophy.md  caching-explanation.html  codebase-intelligence.md  config-reconciliation.md  ctrlcplan.md  design-need-to-discuss-or-test.md  flagged-for-christopher.md  judgement-calls-for-review.md  miscellaneous.md  novel.md  opencode-features-review.md  p51-4.sh  p51-6.sh  plan.md  rooster-4.sh  rooster-6.sh  tool-correction.txt  worktree-proposal.md
.claude/skills/analyze-session-logs/: SKILL.md
.claude/skills/draft-prompt/: SKILL.md
.claude/skills/handle-prompts/: SKILL.md
features/: claw.md  codex.md  mixer.md  oh-my-codex.md  oh-my-openagent.md  opencode.md  pi.md  universal.md
prompts/: auto-router-agent.md  bash-approval-show-full-command.md  context-usage-overlay.md  copy-last-response.md  daemon-graceful-drain-shutdown.md  daemonless-sessions-browse.md  daemonless-tui-ephemeral-lifecycle.md  explore-turn-limit.md  export-slash-command.md  fix-startup-guidance-token-count.md  guidance-file-resolution-fresh-daemon.md  init-instructions-file.md  instructions-file-live-diff.md  llm-modes-defensive-normal.md  model-provider-settings.md  new-clear-alias.md  noninteractive-subagent-display.md  permissions-management-tui.md  plan-duplication-and-model-override.md  plan-run-metrics.md  plan-status-chrome-and-resolver.md  planning-mode-authoring-flow.md  planning-mode-tools-and-storage.md  planning-mode-worktree-execution.md  plans-tui-browser.md  predict-next-message.md  provider-manual-models.md  providers-refetch-all-button.md  ps-stop-session-jobs.md  question-custom-answer-typing.md  question-dialog-ux-overhaul.md  rename-command.md  rename-orchestrator-agents-build-plan.md  repeated-tool-call-approval.md  search-old-sessions.md  session-id-display-and-lazy-persist.md  session-id-exit-print-short.md  session-id-short-display.md  session-id-shown-before-first-message.md  sessions-list-relative-time-and-density.md  (+12 more)
src/: auto_title.rs  banner.rs  cli.rs  credentials.rs  daemon.rs  envref.rs  main.rs  sysinfo.rs  tokens.rs  welcome.rs
src/agents/: builtin_defs.rs  invariants.rs  mod.rs  tests.rs
src/approval/: classify.rs  mod.rs  store.rs
src/auth/: codex.rs  copilot.rs  copilot_setup.rs  mod.rs
src/clipboard/: mod.rs
src/commands/: agent.rs  connect.rs  daemon.rs  debug.rs  export.rs  fetch_models.rs  import.rs  init.rs  kcl.rs  mcp.rs  meta.rs  mod.rs  models.rs  packages.rs  plan.rs  pr.rs  providers.rs  run.rs  session.rs  stats.rs  tui.rs
src/config/: dirs.rs  extended.rs  mod.rs  opencode.rs  provider.rs  providers.rs  resolve.rs
src/daemon/: caffeinate.rs  client.rs  ephemeral_guard.rs  mod.rs  proto.rs  registry.rs  server.rs  session_worker.rs  shutdown.rs
src/db/: guidance.rs  inference_calls.rs  lang.rs  locks.rs  mod.rs  needs_attention.rs  packages.rs  plans.rs  seed_tools.rs  session_log.rs  session_search.rs  sessions.rs  stats.rs  subagent_handles.rs  tokenizer_calibration.rs  tool_calls.rs  usage_events.rs
src/db/migrations/: 0001_initial.sql  0002_sessions_fork.sql  0003_usage_events.sql  0004_tokenizer_calibration.sql  0005_intel_index.sql  0006_packages.sql  0007_seed_tools.sql  0008_interrupt_questions.sql  0009_session_log.sql  0010_sessions_read_archive.sql  0011_approval_grants.sql  0012_loop_guard_rules.sql  0013_session_search_fts.sql  0014_plans.sql  0015_rename_build_agent.sql  0016_guidance_baseline.sql  0017_sessions_ephemeral.sql  0018_plan_model.sql  0019_plan_run_metrics.sql  0020_plan_project_and_attention_context.sql  0021_subagent_handles.sql
src/engine/: agent.rs  compact.rs  deferred.rs  deleg_shrink.rs  docs_pipeline.rs  driver.rs  guidance_diff.rs  injection_check.rs  interrupt.rs  message.rs  mod.rs  model.rs  predict.rs  prune.rs  repair.rs  retry.rs  safety_gate.rs  seed_collector.rs  tool.rs  translate.rs
src/engine/builtin/: auto.md  build.md  coder.md  docs_answerer.md  docs_resolver.md  explore.md  mod.rs  orchestrator_build.md  plan.md  plan_author.md
src/engine/exec/: merge_queue.rs  mod.rs  reslock.rs  resolver.rs  scheduler.rs  worktree.rs
src/engine/jobs/: authority.rs  background.rs  loop_runner.rs  mod.rs  spec.rs
src/git/: mod.rs
src/harness/: mod.rs
src/intel/: budget.rs  lang.rs  mod.rs  resolve.rs
src/locks/: mod.rs
src/providers/: mod.rs  models_fetch.rs
src/redact/: mod.rs
src/session/: mod.rs
src/skills/: auto_select.rs  mod.rs
src/tools/: bash.rs  common.rs  custom.rs  defer.rs  docs.rs  editunlock.rs  glob.rs  grep.rs  handoff.rs  intel.rs  jobs.rs  mod.rs  plan.rs  question.rs  read.rs  readlock.rs  sandbox.rs  seed.rs  session_read.rs  session_search.rs  shell_sandbox.rs  skill.rs  task.rs  unlock.rs  writeunlock.rs
src/tui/: agent_runner.rs  app.rs  banner_box.rs  chat.rs  chrome.rs  composer.rs  context_menu.rs  context_pane.rs  daemon_prompt.rs  diff.rs  file_tag.rs  geometry.rs  history.rs  markdown.rs  mod.rs  model_picker.rs  nav.rs  paste.rs  permissions_pane.rs  plans_pane.rs  pty.rs  sessions_pane.rs  settings.rs  skills_pane.rs  slash.rs  stats_pane.rs  textfield.rs  theme.rs
src/tui/app/: input.rs  mod.rs  render.rs
src/tui/dialog/: approval.rs  mod.rs  question.rs
src/tui/settings/: agent_editor.rs  agents_page.rs  auth.rs  mod.rs  providers.rs  reset.rs  settings_editor.rs  skills_page.rs  tools_page.rs  ui_page.rs
