[package]
name = "cockpit-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "AI coding harness in Rust with a codex-style TUI, multi-agent file locking, deterministic context pruning, and a meta-harness for orchestrating other coding harnesses"
license = "MIT"
repository = "https://github.com/christopher-kapic/cockpit-cli"
homepage = "https://github.com/christopher-kapic/cockpit-cli"
readme = "README.md"
keywords = ["ai", "coding", "agent", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cockpit"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.6", features = ["derive", "wrap_help", "string"] }
clap_complete = "4.6"

# Async runtime
tokio = { version = "1.52", features = [
    "rt-multi-thread", "macros", "process", "io-util", "fs",
    "net", "signal", "time", "sync",
] }
async-trait = "0.1"
futures = "0.3"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# HTTP / providers
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots", "stream"] }
# Provider layer — used as request-builder primitives, not as an agent framework.
# See opencode-features-review.md §13 for the rationale.
rig-core = { version = "0.36", features = ["image"] }
# tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] } # for `cockpit connect` later

# Storage
rusqlite = { version = "0.39", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Filesystem helpers
dirs = "6"
shellexpand = "3"
walkdir = "2"
ignore = "0.4"
globset = "0.4"
notify = "8"

# Secret scanning / redaction
aho-corasick = "1"
dotenvy = "0.15"

# OAuth device-code flow (Codex login). PKCE = SHA-256 + URL-safe base64
# (no padding); `urlencoding` is just for the form-encoded body of the
# RFC 8628 token exchange step.
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
urlencoding = "2"

# Subprocess discovery (Windows: gitbash, on every platform: harness commands)
which = "8"

# Time / IDs
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
uuid = { version = "1", features = ["v4"] }

# Errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Misc
tempfile = "3"
regex = "1"
unicode-width = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
